@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2009-01-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (VersionCommand): Print some build information
+        for MSVC builds.
+
+</UL>
+<p>
 2009-01-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
